Added OpenAI key and further backend/frontend integration

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,19 @@
-fastapi
-uvicorn
-numpy
-sentence-transformers
-openai
-python-docx
-PyMuPDF
+fastapi==0.115.0
+uvicorn==0.30.6
+sentence-transformers==3.1.1
+openai==1.47.0
+numpy==1.26.4
+scikit-learn==1.5.2
+PyMuPDF==1.24.10
+python-docx==1.1.2
+python-dotenv==1.0.1
+python-multipart==0.0.12
+pydantic==2.8.2
+jiter
+torch==2.5.1
+spacy==3.8.2
+regex==2023.10.3
+pillow==10.4.0
+scipy==1.16.2
+
+
